# ninjalooter

./: .coveragerc  .gitignore  .pylintrc  CREDITS.md  LICENSE  README.md  README.rst  item_data.json  ninjalooter.ini.example  ninjalooter.py  ninjalooter_py.spec  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
.github/workflows/: tox_testing.yml
data/: items.json  spells.json
docs/: group-templates.txt
ninjalooter/: autoupdate.py  config.py  constants.py  extra_data.py  logger.py  logparse.py  logreplay.py  message_handlers.py  models.py  overrides.py  raidgroups.py  utils.py  window.py
ninjalooter/cmd/: run.py
ninjalooter/tests/: base.py  test_autoupdate.py  test_config.py  test_extra_data.py  test_logparse.py  test_message_handlers.py  test_models.py  test_raidgroups.py  test_utils.py  test_window.py
ninjalooter/ui/: attendance_frame.py  bidding_frame.py  killtimes_frame.py  menu_bar.py  population_frame.py  raid_overview_frame.py  raidgroups_frame.py  window.py
ninjalooter/working/: group-templates.txt  raidgroups.py  simulated annealing.xlsx
