[metadata]
name = ninjalooter
author = Adam Harwell
summary = Track loot drops/bidding for raids
description_file =
    README.md
requires_python = >=3.7
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Operating System :: Windows
    Programming Language :: Python

[files]
packages =
    ninjalooter
data_files =
    data = data/*
    conf = ninjalooter.ini.example

[entry_points]
console_scripts =
    ninjalooter = ninjalooter.cmd.run:main